<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/toolbar_title"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:fontFamily="@font/roboto_slab"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="5dp">

                            <AutoCompleteTextView
                                android:id="@+id/autoComplete"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                android:text="@string/english"
                                android:textSize="14sp"
                                android:textColor="@color/white" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/bottom_nav_menu" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nav_view"
            android:layout_below="@+id/appbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   >

                   <HorizontalScrollView
                       android:id="@+id/tab_scroll_view"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"

                       >

                       <com.google.android.material.tabs.TabLayout
                           android:id="@+id/tab_bar"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:background="@color/semi_white"
                           >

                           <com.google.android.material.tabs.TabItem
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/all" />

                           <com.google.android.material.tabs.TabItem
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/premier_league" />

                           <com.google.android.material.tabs.TabItem
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/uefa_champions_league" />

                           <com.google.android.material.tabs.TabItem
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/europa_league" />

                           <com.google.android.material.tabs.TabItem
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/la_liga" />

                           <com.google.android.material.tabs.TabItem
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/serie_a" />

                           <com.google.android.material.tabs.TabItem
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/bundesliga" />

                           <com.google.android.material.tabs.TabItem
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/french_ligue" />

                           <com.google.android.material.tabs.TabItem
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/other" />

                       </com.google.android.material.tabs.TabLayout>

                   </HorizontalScrollView>


               </LinearLayout>

                <fragment
                    android:id="@+id/nav_host_fragment_activity_main"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:defaultNavHost="true"
                    app:navGraph="@navigation/mobile_navigation" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

